20060918
 - (dtucker) [configure.ac] On AIX, check to see if the compiler will allow
   macro redefinitions, and if not, remove "-qlanglvl=ansi" from the flags.
   Allows build out of the box with older VAC and XLC compilers.  Found by
   David Bronder and Bernhard Simon.
 - (dtucker) [openbsd-compat/port-aix.{c,h}] Reduce scope of includes.
   Prevents macro redefinition warnings of "RDONLY".

20060916
 - OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2006/09/16 19:53:37
     [deattack.c deattack.h packet.c]
     limit maximum work performed by the CRC compensation attack detector,
     problem reported by Tavis Ormandy, Google Security Team;
     ok markus@ deraadt@
 - (djm) Add openssh.xml to .cvsignore and sort it
 - (dtucker) [auth-pam.c] Propogate TZ environment variable to PAM auth
   process so that any logging it does is with the right timezone.  From
   Scott Strickler, ok djm@.
 - (dtucker) [monitor.c] Correctly handle auditing of single commands when
   using Protocol 1.  From jhb at freebsd.
 - (djm) [sshd.c] Fix warning/API abuse; ok dtucker@
 - (dtucker) [INSTALL] Add info about audit support.

20060912
 - (djm) [Makefile.in buildpkg.sh.in configure.ac openssh.xml.in]
   Support SMF in Solaris Packages if enabled by configure. Patch from
   Chad Mynhier, tested by dtucker@

20060911
 - (dtucker) [cipher-aes.c] Include string.h for memcpy and friends.  Noted
   by Pekka Savola.

20060910
 - (dtucker) [contrib/aix/buildbff.sh] Ensure that perl is available.
 - (dtucker) [configure.ac] Add -lcrypt to let DragonFly build OOTB.

20060909
 - (dtucker) [openbsd-compat/bsd-snprintf.c] Add stdarg.h.
 - (dtucker) [contrib/aix/buildbff.sh] Always create privsep user.
 - (dtucker) [buildpkg.sh.in] Always create privsep user.  ok djm@

20060908
 - (dtucker) [auth-sia.c] Add includes required for build on Tru64.  Patch
   from Chris Adams.
 - (dtucker) [configure.ac] The BSM header test needs time.h in some cases.

20060907