@@ -1,3 +1,11 @@
+20060921
+ - (dtucker) OpenBSD CVS Sync
+   - otto@cvs.openbsd.org 2006/09/19 05:52:23
+     [sftp.c]
+     Use S_IS* macros insted of masking with S_IF* flags. The latter may
+     have multiple bits set, which lead to surprising results. Spotted by
+     Paul Stoeber, more to come. ok millert@ pedro@ jaredy@ djm@
+
 20060918
  - (dtucker) [configure.ac] On AIX, check to see if the compiler will allow
    macro redefinitions, and if not, remove "-qlanglvl=ansi" from the flags.
@@ -5457,4 +5465,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4552 2006/09/18 13:54:32 dtucker Exp $
+$Id: ChangeLog,v 1.4553 2006/09/21 02:59:33 dtucker Exp $
